# Misc

./: .gitignore  CMakeLists.txt  README.md  project.py  vcpkg.json
Buffer/: IndexedBuffer.h  RawBuffer.h
Buffer/_internal/: IndexedBuffer.cpp  RawBuffer.cpp
MemoryPool/: MemoryPool.h
Misc/: CMakeLists.txt
Misc/Buffer/: CMakeLists.txt  RawBuffer.h
Misc/Buffer/_internal/: IndexedBuffer.cpp
Misc/Common/: MiscNamespaceDefs.h
Misc/IPC/: CMakeLists.txt  PipeHost.h  PipeWriter.h
Misc/IPC/_internal/: PipeHost.cpp  PipeWriter.cpp
Misc/IPC/_internal/posix/: PosixPipeHost.cpp  PosixPipeHost.h  PosixPipeWriter.cpp  PosixPipeWriter.h
Misc/MemoryPool/: CMakeLists.txt
Misc/Process/: CMakeLists.txt  ChildProcess.h  ProcessInfo.h
Misc/Process/_internal/: ChildProcess.cpp  ProcessInfo.cpp  ProcessUtils.h
Misc/Thread/: AutoJoiningThread.h  CMakeLists.txt  ThreadPool.h  Worker.h
Misc/Thread/_internal/: ThreadPool.cpp  ThreadPoolWorker.cpp  ThreadPoolWorker.h
Samples/: CMakeLists.txt  ex1-buffer.cpp  ex2-memoryPool.cpp  ex3-memoryPoolLoadTest.cpp  ex4-threadPool.cpp  ex5-pipeUsage.cpp  ex5-posixPipeUsage.cpp  ex6-processUsage.cpp  ex7-processInfoUsage.cpp
Thread/_internal/: TaskQueue.cpp  TaskQueue.h  ThreadPoolWorker.cpp
